# gerrit-ai-reviewer

./: .env.example  .gitignore  Jenkinsfile.example  README.md  pyproject.toml
.github/workflows/: ci.yml
src/gerrit_ai_reviewer/: cli.py  config.py  gerrit.py  llm.py  reviewer.py
tests/: test_gerrit.py  test_llm.py  test_reviewer.py
