[project]
name = "gerrit-ai-reviewer"
version = "0.1.0"
description = "Gerrit AI code reviewer invoked from Jenkins pipeline by change-id"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "pydantic>=2.6",
    "anthropic>=0.40",
    "openai>=1.40",
]

[project.scripts]
gerrit-ai-review = "gerrit_ai_reviewer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gerrit_ai_reviewer"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 110
target-version = "py310"
extend-exclude = [".venv", "dist", "build"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
